--- a/.gitignore
+++ b/.gitignore
@@ -244,6 +244,7 @@ web4/siteroot.all.js
 Web4/Schools/SLExtension.dll
 
 *.js
+*.map
 *.css
 *.dll
 *.exe
@@ -267,3 +268,5 @@ SolutionToolbar/*.dll
 !Web4/JsLib/skins/chinh/css.css
 !Web4/JsLib/skins/skrivanek/css.css
 !Web4/JsLib/skins/grafia/css.css
+
+!WebCommon/Common/uiRouter/urlMatcherFactory.js
