--- a/WebCommon/WebCommon.csproj
+++ b/WebCommon/WebCommon.csproj
@@ -83,9 +83,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Common\Common\templateIndex.html" />
     <Content Include="Common\flux\Index.html" />
     <Content Include="Common\uiRouter\index.html" />
     <Content Include="Common\uiRouter\urlMatcherFactory.js" />
+    <Content Include="Common\validation\Index.html" />
     <Content Include="Global.asax" />
     <Content Include="scripts\core.js" />
     <Content Include="scripts\freezer.js" />
@@ -115,12 +117,16 @@
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
-    <TypeScriptCompile Include="Common\Common.ts" />
+    <TypeScriptCompile Include="Common\Common\ajax.ts" />
+    <TypeScriptCompile Include="Common\Common\Common.ts" />
+    <TypeScriptCompile Include="Common\Common\templateTest.tsx" />
     <TypeScriptCompile Include="Common\flux\flux.ts" />
     <TypeScriptCompile Include="Common\flux\test.tsx" />
     <TypeScriptCompile Include="Common\uiRouter\angularCommon.ts" />
     <TypeScriptCompile Include="Common\uiRouter\router.ts" />
     <TypeScriptCompile Include="Common\uiRouter\routerCommon.ts" />
+    <TypeScriptCompile Include="Common\validation\test.tsx" />
+    <TypeScriptCompile Include="Common\validation\validation.ts" />
     <TypeScriptCompile Include="scripts\typings\core-js.d.ts" />
     <TypeScriptCompile Include="scripts\typings\freezer.d.ts" />
     <TypeScriptCompile Include="scripts\typings\react-bootstrap.d.ts" />
