--- a/WebCommon/WebCommon.csproj
+++ b/WebCommon/WebCommon.csproj
@@ -125,8 +125,9 @@
     <TypeScriptCompile Include="Common\uiRouter\angularCommon.ts" />
     <TypeScriptCompile Include="Common\uiRouter\router.ts" />
     <TypeScriptCompile Include="Common\uiRouter\routerCommon.ts" />
+    <TypeScriptCompile Include="Common\validation\lib.ts" />
     <TypeScriptCompile Include="Common\validation\test.tsx" />
-    <TypeScriptCompile Include="Common\validation\validation.ts" />
+    <TypeScriptCompile Include="Common\validation\components.tsx" />
     <TypeScriptCompile Include="scripts\typings\core-js.d.ts" />
     <TypeScriptCompile Include="scripts\typings\freezer.d.ts" />
     <TypeScriptCompile Include="scripts\typings\react-bootstrap.d.ts" />
