--- a/WebCommon/WebCommon.csproj
+++ b/WebCommon/WebCommon.csproj
@@ -125,6 +125,7 @@
     <TypeScriptCompile Include="Common\uiRouter\angularCommon.ts" />
     <TypeScriptCompile Include="Common\uiRouter\router.ts" />
     <TypeScriptCompile Include="Common\uiRouter\routerCommon.ts" />
+    <TypeScriptCompile Include="Common\uiRouter\test.ts" />
     <TypeScriptCompile Include="Common\validation\lib.ts" />
     <TypeScriptCompile Include="Common\validation\test.tsx" />
     <TypeScriptCompile Include="Common\validation\templates.tsx" />
