--- a/WebCommon/WebCommon.csproj
+++ b/WebCommon/WebCommon.csproj
@@ -85,6 +85,7 @@
   <ItemGroup>
     <Content Include="Common\Common\templateIndex.html" />
     <Content Include="Common\flux\Index.html" />
+    <Content Include="Common\login\index.html" />
     <Content Include="Common\uiRouter\index.html" />
     <Content Include="Common\uiRouter\urlMatcherFactory.js" />
     <Content Include="Common\validation\Index.html" />
@@ -122,6 +123,7 @@
     <TypeScriptCompile Include="Common\Common\templateTest.tsx" />
     <TypeScriptCompile Include="Common\flux\flux.ts" />
     <TypeScriptCompile Include="Common\flux\test.tsx" />
+    <TypeScriptCompile Include="Common\login\test.tsx" />
     <TypeScriptCompile Include="Common\uiRouter\angularCommon.ts" />
     <TypeScriptCompile Include="Common\uiRouter\router.ts" />
     <TypeScriptCompile Include="Common\uiRouter\routerCommon.ts" />
