--- a/WebCommon/WebCommon.csproj
+++ b/WebCommon/WebCommon.csproj
@@ -123,6 +123,9 @@
     <TypeScriptCompile Include="Common\Common\templateTest.tsx" />
     <TypeScriptCompile Include="Common\flux\flux.ts" />
     <TypeScriptCompile Include="Common\flux\test.tsx" />
+    <TypeScriptCompile Include="Common\login\index.ts" />
+    <TypeScriptCompile Include="Common\login\lib.ts" />
+    <TypeScriptCompile Include="Common\login\lm\login.ts" />
     <TypeScriptCompile Include="Common\login\test.tsx" />
     <TypeScriptCompile Include="Common\uiRouter\angularCommon.ts" />
     <TypeScriptCompile Include="Common\uiRouter\router.ts" />
