--- a/DataGraph/DataGraph.csproj
+++ b/DataGraph/DataGraph.csproj
@@ -72,6 +72,7 @@
     <Compile Include="CourseUser.cs">
       <DependentUpon>LMComData.tt</DependentUpon>
     </Compile>
+    <Compile Include="fake.cs" />
     <Compile Include="LMComData.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
