--- a/WebCommon/WebCommon.csproj
+++ b/WebCommon/WebCommon.csproj
@@ -83,13 +83,16 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Common\Common\templateIndex.html" />
+    <Content Include="Common\Common\index.html" />
     <Content Include="Common\flux\Index.html" />
+    <Content Include="Common\Layout\index.html" />
     <Content Include="Common\login\index.html" />
     <Content Include="Common\uiRouter\index.html" />
     <Content Include="Common\uiRouter\urlMatcherFactory.js" />
     <Content Include="Common\validation\Index.html" />
     <Content Include="Global.asax" />
+    <Content Include="Material\material.css" />
+    <Content Include="Material\material.js" />
     <Content Include="scripts\core.js" />
     <Content Include="scripts\react-bootstrap.js" />
     <Content Include="scripts\react-dom.js" />
@@ -119,9 +122,11 @@
   <ItemGroup>
     <TypeScriptCompile Include="Common\Common\ajax.ts" />
     <TypeScriptCompile Include="Common\Common\Common.ts" />
-    <TypeScriptCompile Include="Common\Common\templateTest.tsx" />
+    <TypeScriptCompile Include="Common\Common\test.tsx" />
     <TypeScriptCompile Include="Common\flux\flux.ts" />
     <TypeScriptCompile Include="Common\flux\test.tsx" />
+    <TypeScriptCompile Include="Common\Layout\Layout.ts" />
+    <TypeScriptCompile Include="Common\Layout\test.tsx" />
     <TypeScriptCompile Include="Common\login\index.ts" />
     <TypeScriptCompile Include="Common\login\lib.ts" />
     <TypeScriptCompile Include="Common\login\lm\login.ts" />
@@ -131,6 +136,7 @@
     <TypeScriptCompile Include="Common\uiRouter\routerCommon.ts" />
     <TypeScriptCompile Include="Common\uiRouter\test.ts" />
     <TypeScriptCompile Include="Common\validation\lib.ts" />
+    <TypeScriptCompile Include="Common\validation\mdl-templates.tsx" />
     <TypeScriptCompile Include="Common\validation\test.tsx" />
     <TypeScriptCompile Include="Common\validation\templates.tsx" />
     <TypeScriptCompile Include="scripts\typings\core-js.d.ts" />
