funkcni Layout vcetne Record x Play

--- a/WebCommon/Web.config
+++ b/WebCommon/Web.config
@@ -17,6 +17,10 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler"
         preCondition="integratedMode,runtimeVersionv4.0"/>
     </handlers>
+    <staticContent>
+      <remove fileExtension=".tsx" />
+      <mimeMap fileExtension=".tsx" mimeType="application/javascript" />
+    </staticContent>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
