--- a/WebCommon/Properties/launchSettings.json
+++ b/WebCommon/Properties/launchSettings.json
@@ -6,7 +6,7 @@
       "environmentVariables": {
         "ASPNET_ENV": "Development"
       },
-      "sdkVersion": "dnx-coreclr-win-x86.1.0.0-beta8"
+      "sdkVersion": "dnx-clr-win-x86.1.0.0-beta8"
     },
     "web": {
       "commandName": "web",
