--- a/WebCommon/project.json
+++ b/WebCommon/project.json
@@ -1,33 +1,38 @@
 {
-    "webroot": "wwwroot",
-    "version": "1.0.0-*",
+  "webroot": "wwwroot",
+  "version": "1.0.0-*",
 
-    "dependencies": {
-        "Microsoft.AspNet.Server.IIS": "1.0.0-beta5",
-        "Microsoft.AspNet.Server.WebListener": "1.0.0-beta5",
-        "Microsoft.AspNet.Mvc": "6.0.0-beta5",
-        "Microsoft.Framework.Configuration.Json": "1.0.0-beta5"
+  "dependencies": {
+    "EntityFramework.Commands": "7.0.0-beta8",
+    "Microsoft.AspNet.IISPlatformHandler": "1.0.0-beta8",
+    "Microsoft.AspNet.Mvc": "6.0.0-beta8",
+    "Microsoft.AspNet.Server.Kestrel": "1.0.0-beta8",
+    "Microsoft.AspNet.Server.WebListener": "1.0.0-beta8",
+    "Microsoft.Dnx.Runtime": "1.0.0-beta8",
+    "Microsoft.Framework.Configuration.Json": "1.0.0-beta8",
+    "Newtonsoft.Json": "7.0.1"
+  },
+
+  "frameworks": {
+    "dnx451": {
+      "dependencies": {
+        "WindowsAzure.Storage": "6.1.0",
+        "iTextSharp": "5.5.7"
+      }
     },
+    "dnxcore50": { }
+  },
 
-    "frameworks": {
-        "dnx451": { },
-        "dnxcore50": { }
-    },
+  "commands": {
+    "web": "Microsoft.AspNet.Server.Kestrel"
+  },
 
-    "commands": {
-      "web": "Microsoft.AspNet.Server.Kestrel"
-    },
-
-    "publishExclude": [
-        "node_modules",
-        "bower_components",
-        "**.xproj",
-        "**.user",
-        "**.vspscc"
-    ],
-    "exclude": [
-        "wwwroot",
-        "node_modules",
-        "bower_components"
-    ]
+  "exclude": [
+    "wwwroot",
+    "node_modules"
+  ],
+  "publishExclude": [
+    "**.user",
+    "**.vspscc"
+  ]
 }
