--- a/DesignTimeLib/packages.config
+++ b/DesignTimeLib/packages.config
@@ -1,15 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BoneSoft.CSS" version="1.0.0" targetFramework="net45" />
+  <package id="ClearScript.V8" version="5.4.2.1" targetFramework="net45" />
+  <package id="EcmaScript.Net" version="1.0.1.0" targetFramework="net46" />
   <package id="EntityFramework.Commands" version="7.0.0-beta8" targetFramework="net45" />
   <package id="EntityFramework.Core" version="7.0.0-beta8" targetFramework="net45" />
   <package id="EntityFramework.Relational" version="7.0.0-beta8" targetFramework="net45" />
   <package id="EntityFramework.Relational.Design" version="7.0.0-beta8" targetFramework="net45" />
+  <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net45" />
   <package id="iTextSharp" version="5.5.7" targetFramework="net45" />
   <package id="Ix-Async" version="1.2.5" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="4.0.0-beta8" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net45" />
+  <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.CodeAnalysis.Common" version="1.1.0-beta1-20150928-02" targetFramework="net45" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="1.1.0-beta1-20150928-02" targetFramework="net45" />
+  <package id="Microsoft.Data.Edm" version="5.6.4" targetFramework="net45" />
+  <package id="Microsoft.Data.OData" version="5.6.4" targetFramework="net45" />
+  <package id="Microsoft.Data.Services.Client" version="5.6.4" targetFramework="net45" />
   <package id="Microsoft.Framework.Caching.Abstractions" version="1.0.0-beta8" targetFramework="net45" />
   <package id="Microsoft.Framework.Caching.Memory" version="1.0.0-beta8" targetFramework="net45" />
   <package id="Microsoft.Framework.Configuration" version="1.0.0-beta8" targetFramework="net45" />
@@ -21,9 +33,9 @@
   <package id="Microsoft.Framework.Logging.Abstractions" version="1.0.0-beta8" targetFramework="net45" />
   <package id="Microsoft.Framework.OptionsModel" version="1.0.0-beta8" targetFramework="net45" />
   <package id="Microsoft.Framework.Primitives" version="1.0.0-beta8" targetFramework="net45" />
+  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.1.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
   <package id="Remotion.Linq" version="2.0.0-beta-002" targetFramework="net45" />
-  <package id="SharpZipLib" version="0.86.0" targetFramework="net45" />
   <package id="System.Collections" version="4.0.0" targetFramework="net45" />
   <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net45" />
   <package id="System.Diagnostics.Debug" version="4.0.0" targetFramework="net45" />
@@ -36,7 +48,10 @@
   <package id="System.Runtime" version="4.0.0" targetFramework="net45" />
   <package id="System.Runtime.Extensions" version="4.0.0" targetFramework="net45" />
   <package id="System.Runtime.InteropServices" version="4.0.0" targetFramework="net45" />
+  <package id="System.Spatial" version="5.6.4" targetFramework="net45" />
   <package id="System.Text.Encoding" version="4.0.0" targetFramework="net45" />
   <package id="System.Text.Encoding.Extensions" version="4.0.0" targetFramework="net45" />
   <package id="System.Threading" version="4.0.0" targetFramework="net45" />
+  <package id="WindowsAzure.Storage" version="6.0.0" targetFramework="net45" />
+  <package id="YUICompressor.NET" version="2.7.0.0" targetFramework="net46" />
 </packages>
