--- a/WebCommon/project.json
+++ b/WebCommon/project.json
@@ -3,24 +3,25 @@
   "version": "1.0.0-*",
 
   "dependencies": {
-    "EntityFramework.Commands": "7.0.0-beta8",
+    "Microsoft.Dnx.Runtime": "1.0.0-beta8",
     "Microsoft.AspNet.IISPlatformHandler": "1.0.0-beta8",
     "Microsoft.AspNet.Mvc": "6.0.0-beta8",
     "Microsoft.AspNet.Server.Kestrel": "1.0.0-beta8",
     "Microsoft.AspNet.Server.WebListener": "1.0.0-beta8",
-    "Microsoft.Dnx.Runtime": "1.0.0-beta8",
     "Microsoft.Framework.Configuration.Json": "1.0.0-beta8",
-    "Newtonsoft.Json": "7.0.1"
+    "Newtonsoft.Json": "7.0.1",
+    "WindowsAzure.Storage": "6.1.0",
+    "EntityFramework.Commands": "7.0.0-beta8",
   },
 
   "frameworks": {
     "dnx451": {
       "dependencies": {
-        "WindowsAzure.Storage": "6.1.0",
-        "iTextSharp": "5.5.7"
+        "EPPlus": "1.0.0-*",
+        "LMComLib": "1.0.0-*",
+        "ObjectModel": "1.0.0-*"
       }
-    },
-    "dnxcore50": { }
+    }
   },
 
   "commands": {
