--- a/CubesDeployment/CubesDeployment.csproj
+++ b/CubesDeployment/CubesDeployment.csproj
@@ -35,10 +35,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ClearScript, Version=5.4.2.1, Culture=neutral, PublicKeyToken=935d0c957da47c73, processorArchitecture=MSIL">
-      <HintPath>..\packages\ClearScript.V8.5.4.2.1\lib\net40\ClearScript.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="EntityFramework.Core, Version=7.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.Core.7.0.0-beta8\lib\net45\EntityFramework.Core.dll</HintPath>
       <Private>True</Private>
@@ -157,6 +153,10 @@
     <ProjectReference Include="..\DataLib2\DataLib2.csproj">
       <Project>{d6c78a04-6a43-4aa6-b552-e8c331d58460}</Project>
       <Name>DataLib2</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DesignTimeLib\DesignTimeLib.csproj">
+      <Project>{a13f5f36-5f50-4340-8c1b-55ba52823846}</Project>
+      <Name>DesignTimeLib</Name>
     </ProjectReference>
     <ProjectReference Include="..\LMComLib\LMComLib.csproj">
       <Project>{c4201447-b3c3-4f3a-9e5f-4ff9b5f48570}</Project>
